# tap-todoist

./: README.md  meltano.yml  pyproject.toml
tap_todoist/: base_connector.py  catalog.py  tap.py  types.py
