[tool.poetry]
name = "tap-todoist"
version = "0.1.0"
description = ""
authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]
readme = "README.md"
packages = [{include = "tap_todoist"}]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = "^0.15.0"
requests-cache = "^0.9.7"

[tool.poetry.scripts]
tap-todoist = "tap_todoist.tap:TapTodoist.cli"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
